--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,29 +1,13 @@
 :root {
-
-
   /* Dark Theme */
-  --dark-bg-color: rgb(29, 35, 88) ;
+  --dark-bg-color: rgb(29, 35, 88);
   --dark-text-color: black;
   --dark-prog-bar-color: #34366b;
   --dark-prog-bar-value-color: white;
   --dark-character-count-color: white;
   --text-color: white;
-
-/* Light Theme */
-  /* --light-bg-color: #F3F9D2;
-  --light-text-color: #1F2041;
-  --light-prog-bar-color: blue;
-  --light-prog-bar-value-color: black;
-  --light-character-count-color: ; */
 }
 
-/* #theme-target {
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  display: block;
-  position: absolute;
-} */
 
 body {
   /* background-color: var(--main-bg-color-dark); */
@@ -57,7 +41,7 @@ a:hover {
 }
 
 #after-input {
-  width: 250px;
+  /* width: 250px; */
   margin: 0 auto;
 }
 
@@ -227,21 +211,24 @@ progress {
 }
 
 .vertical-center {
-  min-height: 100%; /* Fallback for browsers do NOT support vh unit */
-  min-height: 100vh; /* These two lines are counted as one :-)       */
+  min-height: 100%;
+  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh;
+  /* These two lines are counted as one :-)       */
   display: flex;
   align-items: center;
 }
 
-input {
+input.main,
+.centered {
   color: #ddd;
   border: none;
   padding: 0;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 20%;
+  padding-right: 20%;
   border-radius: 0;
   outline: none;
-  width: 80%;
+  width: 60%;
   /* min-width: 100%; */
   /* width: 250px; */
   font-size: 3.5rem;
@@ -253,14 +240,13 @@ input {
   text-align: center;
 }
 
-input::placeholder {
-  /* font-size: 3.5rem; */
-  text-align: center;
-
-
+.centered {
+  font-size: 15px
 }
 
-
+input::placeholder {
+  text-align: center;
+}
 
 a {
   text-decoration: none;
@@ -290,7 +276,9 @@ a:hover {
   top: -7px;
   left: -5px;
   cursor: pointer;
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
+  opacity: 0;
+  /* hide this */
+  z-index: 2;
+  /* and place it over the hamburger */
   -webkit-touch-callout: none;
 }
