--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,6 +6,7 @@
   --dark-prog-bar-value-color: white;
   --dark-character-count-color: white;
   --text-color: white;
+  /* color: white; */
 }
 
 
@@ -26,56 +27,39 @@ nav {
   position: absolute;
 }
 
-
+h2 {
+  color: white;
+}
 
 a:hover {
   text-decoration: none;
 }
 
-.float-right {
-  float: right;
-}
-
-.float-left {
-  float: left;
-}
-
-#after-input {
-  /* width: 250px; */
-  margin: 0 auto;
-}
-
-#characterCount {
-  /* color: #383831; */
-  font-size: 12px;
-  position: absolute;
-  right: 10px;
-  margin-top: -45px;
-  z-index: 1000000;
-}
-
-.btn-group {
-  margin: 0 auto;
-  display: flex;
-}
-
-.btn .btn-default {
-  /* background-color: gray; */
-}
 
 .btn {
-  border-radius: 4px;
-}
-
-#done {
+  background-color: rgb(36, 44, 114); /* Green */
   border: none;
-  margin-top: 20px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 2px;
+  text-transform: lowercase;
+  display: inline-block;
+  font-size: .9em;
+  opacity: .4;
+  transition: .5s;
 
-  /* width: 200px; */
 }
 
-#stats {
-  padding: 50px;
+.btn:hover {
+  opacity: 1;
+  transition: .5s;
+
+}
+
+.stats {
+  /* padding: 50px;
   justify-content: center;
   position: absolute;
   top: 50%;
@@ -83,140 +67,77 @@ a:hover {
   transform: translate(-50%, -50%);
   margin: 0 auto;
   z-index: 2345;
-  border-radius: 10px;
+  border-radius: 10px; */
+  width: 60%;
+  padding-right: 20%;
+  padding-left: 20%;
+  margin: 0 auto;
 }
 
-.hide {
-  opacity: 0;
-  transition: opacity 1s linear;
-  -webkit-transition: opacity 1s linear;
-  -moz-transition: opacity 1s linear;
-  -o-transition: opacity 1s linear;
+.stat {
+  color: white;
+  text-align: left;
+  position: fixed;
 }
 
-.show {
-  opacity: 1;
-  transition: opacity 1s linear;
-  -webkit-transition: opacity 1s linear;
-  -moz-transition: opacity 1s linear;
-  -o-transition: opacity 1s linear;
-}
-
-#stats .btn-default {
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  min-width: 120px;
-  color: #191919;
-  background-color: #9c9ba1;
-  border: none;
-  border-radius: 5px;
-}
-
-#stats h5 {
-  font-size: 20px;
-  font-weight: bolder;
-  text-align: center;
-  padding-bottom: 10px;
-}
-
-#stats .btn-default:hover {
-  background-color: "black";
-}
-
-#stats {
-  color: #191919;
-}
-
-#stats ul {
+.stats ul {
   list-style-type: none;
   padding-left: 10px;
+  position: fixed;
+  transition: 2s;
 }
 
-#stats li {
+.stats li {
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-left: -5px;
+  margin-left: 20px;
 }
 
-#timeElapsed {
-  float: right;
-}
-
-.container {
-  padding: 0;
-  width: 100%;
-}
-
-#wordCount {
-  color: #383831;
-  float: right;
-  text-align: right;
-  font-size: 12px;
-}
-
-#finalWordCount {
-  float: right;
-}
-
-#finalCharCount {
-  float: right;
-}
-
-#mostCommonWords {
-  font-size: 1.5em;
-  padding-top: 10px;
-}
-
-#prompt {
-  float: right;
-  text-align: right;
-  font-size: 12px;
-}
-
-.second-wrapper {
-  color: #fff;
-  border: none;
-  padding: 0;
-  border-radius: 0;
-  outline: none;
-  width: auto;
-  min-width: 100%;
-  font-size: 20px;
-  font-family: Roboto, Arial, sans-serif;
-  position: relative;
-}
 
 progress {
   border: none;
   width: 100%;
   position: absolute;
+  height: 2%;
   z-index: -1;
-  background-color: yellow !important;
-  /* height:  */
 }
-
-
 
 .input-wrapper {
   width: 100%;
-  /* height: 150px; */
-  margin: 0 auto;
-  margin-bottom: 100px;
-  /* opacity: 0.5; */
-  /* border-style: none; */
-  /* border-width: 1px 0px 1px 0px; */
-  /* border-color: black; */
-  position: relative;
+  position: fixed;
 }
+
+input::placeholder {
+  color:white;
+  opacity: .3;
+}
+
 
 .vertical-center {
   min-height: 100%;
-  /* Fallback for browsers do NOT support vh unit */
   min-height: 100vh;
-  /* These two lines are counted as one :-)       */
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.Footer>a {
+  font-size: 30px;
+  float: none;
+  padding: 20px;
+  display: block;
+  opacity: 0.30;
+  transition: .5s
+}
+
+.Footer>a:hover {
+  opacity: 1;
+  transition: .5s
+}
+
+.Footer {
+  display: flex;
+  margin-top: 70vh
 }
 
 input.main,
@@ -229,10 +150,7 @@ input.main,
   border-radius: 0;
   outline: none;
   width: 60%;
-  /* min-width: 100%; */
-  /* width: 250px; */
   font-size: 3.5rem;
-  /* background-color: blue; */
   line-height: 3em;
   font-family: Roboto, Arial, sans-serif;
   background-color: transparent;
@@ -244,41 +162,16 @@ input.main,
   font-size: 15px
 }
 
-input::placeholder {
-  text-align: center;
-}
+
+
+
 
 a {
   text-decoration: none;
-  color: #232323;
+  color: white;
   transition: color 0.1s ease;
 }
 
 a:hover {
   color: #9b9b9b;
-}
-
-#menuToggle {
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  z-index: 2;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle input {
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0;
-  /* hide this */
-  z-index: 2;
-  /* and place it over the hamburger */
-  -webkit-touch-callout: none;
 }
