--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,11 +22,6 @@ body {
 
 
 
-nav {
-  display: flex;
-  position: absolute;
-}
-
 h2 {
   color: white;
 }
@@ -38,6 +33,7 @@ a:hover {
 
 .btn {
   background-color: rgb(36, 44, 114); /* Green */
+  position: relative;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -61,36 +57,55 @@ a:hover {
 .stats {
   /* padding: 50px;
   justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+ 
+ 
   transform: translate(-50%, -50%);
   margin: 0 auto;
   z-index: 2345;
   border-radius: 10px; */
-  width: 60%;
+  /* width: 60%; */
   padding-right: 20%;
   padding-left: 20%;
-  margin: 0 auto;
+  right: 20%;
+  left: 20%;
+
+  /* left: 50%; */
+  position: fixed;
+  bottom: 25%;
+  /* margin: 0 auto; */
+
+
 }
 
-.stat {
-  color: white;
+.stats p {
   text-align: left;
-  position: fixed;
+}
+.stats p span {
+  float: right;
 }
 
 .stats ul {
   list-style-type: none;
-  padding-left: 10px;
-  position: fixed;
+position: fixed;
+  margin-top: 10vh;
+  /* margin-top: 200px; */
   transition: 2s;
+  /* margin: 0 auto; */
+  display: flex;
+  justify-content: center;
+}
+
+li span {
+  font-weight: 800;
+  margin: .5em;
 }
 
 .stats li {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-left: 20px;
+
+  /* margin-left: 20px; */
+  /* float: left; */
+  float: none;
+
 }
 
 
@@ -107,6 +122,11 @@ progress {
   position: fixed;
 }
 
+input {
+  position: fixed;
+  top: 30vh
+}
+
 input::placeholder {
   color:white;
   opacity: .3;
@@ -119,6 +139,7 @@ input::placeholder {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .Footer>a {
