--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,9 +43,16 @@ a:hover {
   text-transform: lowercase;
   display: inline-block;
   font-size: .9em;
+  width: 40vh;
   opacity: .4;
   transition: .5s;
 
+}
+
+.popularWord {
+  margin: 10px;
+  margin-top: 30px ;
+  float: left;
 }
 
 .btn:hover {
@@ -64,13 +71,13 @@ a:hover {
   z-index: 2345;
   border-radius: 10px; */
   /* width: 60%; */
-  padding-right: 20%;
-  padding-left: 20%;
+  /* padding-right: 20%; */
+  /* padding-left: 20%; */
   right: 20%;
   left: 20%;
-
+  margin-top: 20vh;
   /* left: 50%; */
-  position: fixed;
+  /* position: fixed; */
   bottom: 25%;
   /* margin: 0 auto; */
 
